[workspace]
members = [
    "sweat",
    "sweat",
    "integration-tests",
    "exploit-stub"
]

resolver = "2"

[workspace.dependencies]
tokio = "1.28.0"
anyhow = "1.0.75"
async-trait = "0.1.74"

near-units = "0.2.0"
near-workspaces = "0.10.0"

near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }
near-contract-standards = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }

integration-trait = { git = "https://github.com/sweatco/integration-utils.git", rev = "e54dc392ef42837123dd2c0ad19b6d6b815192d7" }
integration-utils = { git = "https://github.com/sweatco/integration-utils.git", rev = "e54dc392ef42837123dd2c0ad19b6d6b815192d7" }

sweat-model = { path = "model" }
