[workspace]
members = [
    "sweat",
    "sweat",
    "integration-tests",
    "exploit-stub"
]

resolver = "2"

[workspace.dependencies]
tokio = "1.28.0"
anyhow = "1.0.75"
async-trait = "0.1.74"

near-units = "0.2.0"
near-workspaces = "0.10.0"

near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }
near-contract-standards = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }

nitka = "0.2.0"
nitka-proc = "0.2.0"

near-self-update = "0.1.0"
near-self-update-proc = "0.0.1"

sweat-model = { path = "model" }
