[workspace]
members = [
    "sweat",
    "sweat",
    "integration-tests",
    "exploit-stub"
]

resolver = "2"

[workspace.dependencies]
tokio = "1.28.0"
anyhow = "1.0.75"

near-units = "0.2.0"
near-workspaces = "0.14.0"

near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "d5e975e3b224b5758745ab46c25d586a8e0db473" }
near-contract-standards = { git = "https://github.com/sweatco/near-sdk-rs", rev = "d5e975e3b224b5758745ab46c25d586a8e0db473" }

nitka = "=0.4.1"
nitka-proc = "=0.4.0"

near-self-update = "0.2.0"
near-self-update-proc = "0.2.0"

sweat-model = { path = "model" }
