[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
# borsh = "0.9"
# maplit = "1.0"
near-units = "0.2.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
# tracing = "0.1"
# tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
workspaces = "0.2.0"
near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "b63b449236d57d8bfb8f64ba277f848a74fddcb1" }

[[example]]
name = "mint"
path = "src/mint.rs"

[[example]]
name = "transfer"
path = "src/transfer.rs"

[[example]]
name = "formula"
path = "src/formula.rs"
