[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
# borsh = "0.9"
# maplit = "1.0"
near-units = "0.2.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
# tracing = "0.1"
# tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
workspaces = "0.7.0"
near-sdk = { workspace = true }

[[example]]
name = "mint"
path = "../integration-tests/src/mint.rs"

[[example]]
name = "transfer"
path = "../integration-tests/src/transfer.rs"

[[example]]
name = "formula"
path = "src/formula.rs"

[[example]]
name = "defer"
path = "src/defer.rs"
