[package]
name = "integration-tests"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "integration_tests"

[dev-dependencies]
near-workspaces = { workspace = true }
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

near-units = { workspace = true }
borsh = "0.10.3"
maplit = "1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
pkg-config = "0.3.1"

[dependencies]
async-trait = "0.1.73"

sweat-model = { workspace = true, features = ["integration-test"] }
integration-utils = { workspace = true }
