[package]
name = "integration-tests"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "integration_tests"

[dev-dependencies]
near-workspaces = { workspace = true }
near-contract-standards = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

near-units = { workspace = true }
maplit = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
pkg-config = "0.3.27"

[dependencies]
async-trait = "0.1.77"

sweat-model = { workspace = true, features = ["integration-api"] }
nitka = { workspace = true }
near-self-update = { workspace = true }
