[package]
name = "sweat-model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
integration-trait = { workspace = true }

near-sdk = { workspace = true }
near-contract-standards = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
integration-utils = { workspace = true }
