[package]
name = "sweat-model"
version = "0.1.0"
edition = "2021"

[features]
default = []
integration-test = ["dep:nitka", "dep:near-workspaces"]
integration-api = ["dep:nitka", "dep:near-workspaces", "dep:near-self-update"]
release-api = []

[dependencies]
nitka-proc = { workspace = true }

near-sdk = { workspace = true }
near-contract-standards = { workspace = true }

nitka = { workspace = true, optional = true }
near-workspaces = { workspace = true, optional = true }
near-self-update = { workspace = true, optional = true }
