[package]
name = "sweat-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
integration-utils = { workspace = true }

sweat-model = { workspace = true, features = ["integration-test"] }

near-units = "0.2.0"
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }
near-workspaces = "0.9.0"
