[package]
name = "sweat"
version = "1.2.1"
authors = []
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
integration-test = []

[dependencies]
sweat-model = { workspace = true }

static_assertions = "1.1.0"
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }
