[package]
name = "sweat"
version = "1.2.1"
authors = []
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["release"]
release = ["sweat-model/release-api"]
integration-test = ["sweat-model/release-api"]
integration-api = ["sweat-model/integration-api"]

[dependencies]
sweat-model = { workspace = true }

static_assertions = "1.1.0"
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }
